--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="myfirstsite/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/project">Project</a>
+          <a class="nav-link" href="myfirstsite/project">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact Me</a>
+          <a class="nav-link" href="myfirstsite/contact">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="myfirstsite/about">About</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
