--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="urls.project">Project</a>
+          <a class="nav-link" href="url'project'">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="urls.contact">Contact Me</a>
+          <a class="nav-link" href="">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="url.about">About</a>
+          <a class="nav-link" href="">About</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
