--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <a class="nav-link" href="project">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Contact Me</a>
+          <a class="nav-link" href="contact">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">About</a>
+          <a class="nav-link" href="about">About</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
