--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/myfirstsite">Welcome friend</a>
+    <a class="navbar-brand" href="/">Welcome friend</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,13 @@
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% urls'project'%}">Project</a>
+          <a class="nav-link" href="project">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Contact Me</a>
+          <a class="nav-link" href="contact">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">About</a>
+          <a class="nav-link" href="about">About</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
